--- a/SnackisWebApp/Pages/Admin/UserRoleManager.cshtml
+++ b/SnackisWebApp/Pages/Admin/UserRoleManager.cshtml
@@ -24,9 +24,10 @@
                 <td>@user.Email</td>
                 <td>@string.Join(" , ", user.Roles.ToList())</td>
                 <td>
-                    <a class="btn btn-primary" asp-controller="UserRoles" asp-action="Manage" asp-route-userId="@user.UserId">Manage Roles</a>
+                    <a class="btn btn-primary"asp-page="ManageUserRoles" asp-route-userId="@user.UserId">Manage Roles</a>
                 </td>
             </tr>
         }
     </tbody>
 </table>
+
