--- a/SnackisWebApp/Pages/Shared/_LoginPartial.cshtml
+++ b/SnackisWebApp/Pages/Shared/_LoginPartial.cshtml
@@ -16,6 +16,15 @@
         <li class="nav-item">
             <a id="manage" class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hello @UserManager.GetUserName(User)!</a>
         </li>
+        @if (await UserManager.IsInRoleAsync(await UserManager.GetUserAsync(User), "Admin"))
+        {
+            <li class="nav-item">
+                <a class="nav-link text-dark" asp-page="/Admin/AdminIndex">Index</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link text-dark" asp-page="/Admin/UserRoleManager">Roles</a>
+            </li>
+        }
         <li class="nav-item">
             <form id="logoutForm" class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Page("/Index", new { area = "" })">
                 <button id="logout" type="submit" class="nav-link btn btn-link text-dark">Logout</button>
