--- a/SnackisWebApp/Pages/Admin/ReportManager.cshtml
+++ b/SnackisWebApp/Pages/Admin/ReportManager.cshtml
@@ -6,7 +6,7 @@
 @model SnackisWebApp.Pages.Admin.ReportManagerModel
 @{
 }
-<div class="container" style="width:800px">
+<div class="container mt-5" style="width:800px">
     @if (Model.Reports.Count > 0)
     {
         @foreach (var report in Model.Reports)
