--- a/SnackisWebApp/Pages/MessageView.cshtml
+++ b/SnackisWebApp/Pages/MessageView.cshtml
@@ -11,7 +11,7 @@
 @{
 }
 
-<div class="container" style="width:800px">
+<div class="container mt-5" style="width:800px">
     @if (Model.Messages.Count == 0)
     {
         <h1>Inkorgen är tom..</h1>
