--- a/SnackisWebApp/Pages/Admin/ManageUserRoles.cshtml
+++ b/SnackisWebApp/Pages/Admin/ManageUserRoles.cshtml
@@ -4,31 +4,32 @@
     ViewData["Title"] = "Manage";
 }
 
-<form method="post">
-    <div class="card">
-        <div class="card-header">
-            <h2>Manage User Roles</h2>
-            Add/Remove Roles for User / @ViewBag.UserName.
+<div class="container mt-5">
+    <form method="post">
+        <div class="card">
+            <div class="card-header">
+                <h2>Rollhantering</h2>
+                Lägg till eller ta bort roller
+            </div>
+            <div class="card-body">
+                @for (int i = 0; i < Model.ManageRoles.Count; i++)
+                {
+                    <div class="form-check m-1">
+                        <input type="hidden" asp-for="@Model.ManageRoles[i].RoleId" />
+                        <input type="hidden" asp-for="@Model.ManageRoles[i].RoleName" />
+                        <input asp-for="@Model.ManageRoles[i].Selected" class="form-check-input" />
+                        <label class="form-check-label" asp-for="@Model.ManageRoles[i].Selected">
+                            @Model.ManageRoles[i].RoleName
+                        </label>
+                    </div>
+                }
+                <div asp-validation-summary="All" class="text-danger"></div>
+            </div>
+            <div class="card-footer">
+                <input type="submit" value="Uppdatera" class="btn btn-primary"
+                       style="width:auto" />
+                <a asp-page="/Admin/UserRoleManager" class="btn btn-primary" style="width:auto">Avbryt</a>
+            </div>
         </div>
-        <div class="card-body">
-            @for (int i = 0; i < Model.ManageRoles.Count; i++)
-            {
-                <div class="form-check m-1">
-                    <input type="hidden" asp-for="@Model.ManageRoles[i].RoleId" />
-                    <input type="hidden" asp-for="@Model.ManageRoles[i].RoleName" />
-                    <input asp-for="@Model.ManageRoles[i].Selected" class="form-check-input" />
-                    <label class="form-check-label" asp-for="@Model.ManageRoles[i].Selected">
-                        @Model.ManageRoles[i].RoleName
-                    </label>
-                </div>
-            }
-            <div asp-validation-summary="All" class="text-danger"></div>
-        </div>
-        <div class="card-footer">
-            <input type="submit" value="Update" class="btn btn-primary"
-                   style="width:auto" />
-            <a asp-action="EditUser" asp-route-id="@ViewBag.userId"
-               class="btn btn-primary" style="width:auto">Cancel</a>
-        </div>
-    </div>
-</form>
+    </form>
+</div>
