--- a/SnackisWebApp/Pages/Admin/UserRoleManager.cshtml
+++ b/SnackisWebApp/Pages/Admin/UserRoleManager.cshtml
@@ -4,30 +4,34 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>User Roles</h1>
-<table class="table table-striped">
-    <thead>
-        <tr>
-            <th>First Name</th>
-            <th>Last Name</th>
-            <th>Email</th>
-            <th>Roles</th>
-            <th>Action</th>
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (var user in Model.userRoles)
-        {
+<div class="container mt-5">
+    <div class="text-center">
+    <p class="display-4">Användarroller</p>
+    </div>
+    <table class="table table-striped">
+        <thead>
             <tr>
-                <td>@user.FirstName</td>
-                <td>@user.LastName</td>
-                <td>@user.Email</td>
-                <td>@string.Join(" , ", user.Roles.ToList())</td>
-                <td>
-                    <a class="btn btn-primary"asp-page="ManageUserRoles" asp-route-userId="@user.UserId">Manage Roles</a>
-                </td>
+                <th>Namn</th>
+                <th>Efternamn</th>
+                <th>Email</th>
+                <th>Roller</th>
+                <th>Hantering</th>
             </tr>
-        }
-    </tbody>
-</table>
+        </thead>
+        <tbody>
+            @foreach (var user in Model.userRoles)
+            {
+                <tr>
+                    <td>@user.FirstName</td>
+                    <td>@user.LastName</td>
+                    <td>@user.Email</td>
+                    <td>@string.Join(" , ", user.Roles.ToList())</td>
+                    <td>
+                        <a class="btn btn-primary" asp-page="ManageUserRoles" asp-route-userId="@user.UserId">Hantera roller</a>
+                    </td>
+                </tr>
+            }
+        </tbody>
+    </table>
+</div>
 
