--- a/SnackisWebApp/Pages/CommentsView.cshtml
+++ b/SnackisWebApp/Pages/CommentsView.cshtml
@@ -13,18 +13,20 @@
 }
 
 
-<div class="container justify-content-center" style="display:flex;">
+<div class="container justify-content-center mt-5" style="display:flex;">
 
     <br />
-    <div class="text-center" style="width:800px">
-        <nav style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb">
-            <ol class="breadcrumb">
-                <li class="breadcrumb-item"><a style="text-decoration: none" asp-page="Index">Kategorier</a></li>
-                <li class="breadcrumb-item"><a style="text-decoration: none" asp-page="PostsView" asp-route-SubCategoryId="@Model.SubCategory.ID">@Model.SubCategory.Name</a></li>
-                <li class="breadcrumb-item active" aria-current="page">@Model.Post.Name</li>
-            </ol>
-        </nav>
-        <div class="card mb-3" style="max-width: 800px; background-color:#C7E0ED">
+    <div style="width:800px">
+        <div class="text-center">
+            <nav style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb">
+                <ol class="breadcrumb">
+                    <li class="breadcrumb-item"><a style="text-decoration: none" asp-page="Index">Kategorier</a></li>
+                    <li class="breadcrumb-item"><a style="text-decoration: none" asp-page="PostsView" asp-route-SubCategoryId="@Model.SubCategory.ID">@Model.SubCategory.Name</a></li>
+                    <li class="breadcrumb-item active" aria-current="page">@Model.Post.Name</li>
+                </ol>
+            </nav>
+        </div>
+        <div class="card mb-3 shadow-sm" style="max-width: 800px; background-color:#C7E0ED">
             <div class="row g-0">
                 <div class="col-1 mt-1">
 
@@ -36,10 +38,10 @@
                         <img class="shadow-sm" style="width:100px;height:100px; object-fit:cover; border-radius:10px" src="data:image/*;base64,@(Convert.ToBase64String(Model.CreatedByUser.ProfilePicture))">
                         <br />
                         <button type="button" class="border-0 bg-transparent" data-bs-toggle="modal" data-bs-target="#CreateMessageModal" data-bs-messageUserId="@Model.Post.User"><i class="fa fa-comment text-right" style="color:white; font-size:20px;"></i></button>
-                        <small class="text-muted">@Model.CreatedByUser.UserName</small>
+                        <small class="text-muted text-center">@Model.CreatedByUser.UserName</small>
                     }
                 </div>
-                <div class="col-8">
+                <div class="col-8 text-center">
                     <div class="card-body mt-2">
                         <h5 class="card-title">@Model.Post.Name</h5>
                         <p class="card-text">@Model.Post.Content</p>
@@ -53,7 +55,7 @@
         {
             if (Model.Post.ID == comment.PostID)
             {
-                <div class="card mb-3" style="width: 800px; background-color:#DCE5EA">
+                <div class="card mb-3 shadow-sm" style="width: 800px; background-color:#DCE5EA">
                     <div class="row g-0">
                         <div class="col-1 mt-1">
                             <button type="button" class="border-0 bg-transparent" data-bs-toggle="modal" data-bs-target="#CreateReportModal" data-bs-commentId="@comment.ID"><i class="fa fa-exclamation-circle text-right" style="color:#FBEE70; font-size:20px;"></i></button>
@@ -68,7 +70,7 @@
 
                             }
                         </div>
-                        <div class="col-8 align-self-center mb-1">
+                        <div class="col-8 align-self-center mb-1 text-center">
                             <div class="card-body mt-2">
                                 <p class="card-text">@comment.Content</p>
                                 <p class="card-text"><small class="text-muted">@comment.CreatedAt</small></p>
