--- a/SnackisWebApp/Pages/PostsView.cshtml
+++ b/SnackisWebApp/Pages/PostsView.cshtml
@@ -13,7 +13,7 @@
 @*<i class="fa fa-exclamation-circle" style="color:#FBEE70; font-size:25px;"></i>
 <i class="fa fa-trash" style="color:#FB7070; font-size:25px;"></i>*@
 
-<div class="container justify-content-center text-center" style="display:flex;">
+<div class="container justify-content-center text-center mt-5" style="display:flex;">
     <div class="btn-group-vertical" style="width:800px">
         <div style="width:800px">
             <nav style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb">
@@ -27,7 +27,7 @@
         {
             if (Model.SubCategory.ID == post.SubCategoryID)
             {
-                <div class="mb-2 rounded" style="width:800px; background-color: #C7E0ED">
+                <div class="mb-2 rounded shadow-sm" style="width:800px; background-color: #C7E0ED">
                         <div class="mt-3 mb-3">
                     <div class="row">
                             @*<div class="col-2">
