--- a/SnackisWebApp/Pages/MessageView.cshtml
+++ b/SnackisWebApp/Pages/MessageView.cshtml
@@ -34,6 +34,12 @@
                             <br />
                             <small class="text-muted">@message.FromUser</small>
                         }
+                        else
+                        {
+                            <i style="font-size: 100px;" class="fa fa-user text-muted"></i>
+                            <br />
+                            <small class="text-muted">@message.FromUser</small>
+                        }
                     </div>
                     <div class="col-9">
                         <div class="row">
