--- a/SnackisWebApp/Pages/Admin/ReportManager.cshtml
+++ b/SnackisWebApp/Pages/Admin/ReportManager.cshtml
@@ -21,7 +21,7 @@
                                 <div class="col-11">
                                     <strong>Rapporterad kommentar:</strong>
                                     <p>@comment.Content</p>
-                                    <p>@comment.CreatedAt</p>
+                                    <small>@comment.CreatedAt</small>
                                 </div>
                                 <div class="col-1">
                                     <form method="post" asp-page-handler="DeleteComment">
@@ -38,8 +38,8 @@
                                 <div class="col-11">
                                     <strong>Rapporterad post:</strong>
                                     <p>@post.Name</p>
-                                    <p>@post.Content</p>
-                                    <p>@post.CreatedAt</p>
+                                    <small>@post.Content</small>
+                                    <small>@post.CreatedAt</small>
                                 </div>
                                 <div class="col-1">
                                     <form method="post" asp-page-handler="DeletePost">
@@ -55,7 +55,7 @@
                     <div class="row">
                         <div class="col-11">
                             <p>@report.Content</p>
-                            <p>@report.CreatedAt</p>
+                            <small>@report.CreatedAt</small>
                         </div>
                         <div class="col-1">
                             <form method="post" asp-page-handler="DeleteReport">
